--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("https://i.ibb.co/Z1m3tv9/markus-spiske-gcgves5-H-Ac-unsplash.jpg") top right no-repeat;
+  background: #040404 url("../../img/bg.jpg") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
